@@ -66,6 +66,7 @@ version <next>:
 - nnedi deinterlacer
 - streamselect video and astreamselect audio filter
 - swaprect filter
+- metadata video and ametadata audio filter
 
 
 version 2.8:
